use correct email template (from psama-db-overlay project)

--- a/initial-configuration/config/wildfly/emailTemplates/accessEmail.mustache
+++ b/initial-configuration/config/wildfly/emailTemplates/accessEmail.mustache
@@ -1,5 +1,8 @@
 Access Changed:
 
+Your user name is {{username}}
+Your generated password is {{initialPassword}} You will need to change this the first time you log into the system.
+
 {{#rolesExists}}
 You have been granted access to {{systemName}} with the following roles:
 {{/rolesExists}}
